--- a/public/locales/en/common.json
+++ b/public/locales/en/common.json
@@ -953,5 +953,11 @@
       "reminders": "Reminders",
       "nextReminder": "Next Reminder",
       "none": "None"
+    },
+    "nomad": {
+        "nodes": "Nodes",
+        "jobs": "Jobs",
+        "volumes": "Volumes",
+        "services": "Services"
     }
 }
